--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,10 +20,10 @@ jobs:
           python-version: '3.10'
       - name: Install the dependencies
         run: |
+          cd projects/python-deploy
           python -m pip install -r requirements.txt
       - name: Build the JupyterLite site
         run: |
-          cp readme.md content
           jupyter lite build --contents content --output-dir dist
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
